--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,6 +158,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorPrimary"
+                android:textCursorDrawable="@null"
                 android:hint="@string/q3_hint"
                 android:inputType="text"
                 android:maxLines="1"
