--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,14 +47,7 @@
                 android:gravity="start"
                 android:text="@string/welcome_message" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="12dp"
-                android:onClick="startButton"
-                android:padding="12dp"
-                android:text="@string/start" />
+
 
             <View
                 style="@style/viewLine" />
@@ -83,12 +76,12 @@
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/answer_1_true"
+                    android:id="@+id/answer_1_a"
                     style="@style/radio_buttons"
                     android:text="@string/true_text" />
 
                 <RadioButton
-                    android:id="@+id/answer_1_false"
+                    android:id="@+id/answer_1_b"
                     style="@style/radio_buttons"
                     android:text="@string/false_text" />
 
@@ -331,13 +324,32 @@
                 style="@style/viewLine" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_horizontal"
+            android:orientation="horizontal"
+
+            >
         <Button
             android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
             android:onClick="submitButton"
             android:text="@string/submit" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="12dp"
+                android:layout_weight="1"
+                android:onClick="startButton"
+                android:padding="12dp"
+                android:text="@string/start" />
+    </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
